# Computer_Graphics

./: .gitignore  CMakeLists.txt  main.cpp
project_week_1.vs/: project_week_1.sln  project_week_1.vcxproj  project_week_1.vcxproj.filters
project_week_1.xcodeproj/: project.pbxproj
project_week_1.xcodeproj/project.xcworkspace/xcuserdata/keeganriley.xcuserdatad/: UserInterfaceState.xcuserstate
project_week_1.xcodeproj/xcshareddata/xcschemes/: project_week_1.xcscheme
project_week_1.xcodeproj/xcuserdata/keeganriley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
project_week_1.xcodeproj/xcuserdata/keeganriley.xcuserdatad/xcschemes/: xcschememanagement.plist
resources/levels/: level1.txt
resources/save_data/: save.json
src/: animation.cpp  animation.hpp  box.cpp  box.hpp  capture_zone.cpp  capture_zone.hpp  image.cpp  image.hpp  info.hpp  init_sdl.cpp  init_sdl.hpp  input.cpp  input.hpp  map.cpp  map.hpp  menu.cpp  menu.hpp  movement.cpp  movement.hpp  player.cpp  player.hpp  preprocessor.h  save_game.cpp  save_game.hpp  save_tool.cpp  save_tool.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  sprite_sheet.cpp  sprite_sheet.hpp  texture.cpp  texture.hpp  tree.cpp  tree.hpp  vector.cpp  vector.hpp  water.cpp  water.hpp
